--- a/style.css
+++ b/style.css
@@ -116,26 +116,24 @@ input:checked + .scout-qa--toggle-slider::before {
 /* HIGHLIGHTING */
 
 .scout-qa--highlight {
-  transition: background-color .1s;
-  -webkit-transition: background-color .1s;
-  background-color: var(--scout-royal-purple-fade);
+  transition: background-color .1s !important;
+  -webkit-transition: background-color .1s !important;
+  background-color: var(--scout-royal-purple-fade) !important;
   position: relative;
-  box-sizing: border-box;
 }
 
 .scout-qa--highlight::after {
   content: '';
   position: absolute;
   top: -2px;
-  right: 2px;
-  bottom: 2px;
+  right: -2px;
+  bottom: -2px;
   left: -2px;
-  width: 100%;
-  height: 100%;
-  transition: border .1s;
+  z-index: 2;
+  transition: border .1s ease-in-out;
   -webkit-transition: border .1s;
-  border-radius: 3px !important;
-  border: 2px solid var(--scout-royal-purple) !important;
+  border-radius: 3px;
+  border: 2px solid var(--scout-royal-purple);
 }
 
 .scout-qa--label-wrap {
@@ -159,12 +157,12 @@ input:checked + .scout-qa--toggle-slider::before {
   display: flex;
   box-sizing: border-box;
   align-items: center;
-  padding: 6px !important;
-  color: white !important;
-  font-size: 13px !important;
-  text-transform: lowercase !important;
-  font-weight: 500 !important;
-  margin: 0 !important;
+  padding: 6px;
+  color: white;
+  font-size: 13px;
+  text-transform: lowercase;
+  font-weight: 400;
+  margin: 0;
 }
 
 .scout-qa--label {
