--- a/styles/scout.css
+++ b/styles/scout.css
@@ -11,7 +11,11 @@
   --scout-font-family-code: 'Inconsolata', monospace;
 }
 
-/* POPUP CONTROL WINDOW  */
+/* Pop-up */
+
+body {
+  margin: 0;
+}
 
 .scout-qa--popup {
   min-width: 338px;
@@ -21,8 +25,6 @@
 
 .scout-qa--header {
   background-color: var(--scout-royal-purple);
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
   box-sizing: border-box;
   padding: 24px;
   width: 100%;
@@ -34,8 +36,6 @@
 .scout-qa--body {
   padding: 24px;
   background-color: var(--scout-navy);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 
 .scout-qa--description {
@@ -90,7 +90,7 @@
   display: flex;
   align-content: center;
   justify-content: center;
-  content: url("svg/binoculars.svg");
+  content: url("../svg/binoculars.svg");
   height: 28px;
   width: 28px;
   box-sizing: border-box;
@@ -113,8 +113,8 @@ input:checked + .scout-qa--toggle-slider::before {
 }
 
 
-/* HIGHLIGHTING */
-/* !importants exist to overwrite any other possible styles on elements */
+
+/* Highlighter */
 
 .scout-qa--highlight {
   transition: background-color .1s !important;
